1999-10-23  Dave Love  <fx@gnu.org>

	* nnvirtual.el (nnvirtual-create-mapping): Don't use mapc.

1999-10-19  Dave Love  <fx@gnu.org>

	* pop3.el: Merge changes from version `1.3s' which we weren't sent.

1999-10-15  Stefan Monnier  <monnier@cs.yale.edu>

	* gnus-start.el (gnus-slave-save-newsrc):
	* gnus-uu.el (gnus-uu-tmp-dir, gnus-uu-decode-binhex)
	  (gnus-uu-decode-binhex-view, gnus-uu-digest-mail-forward)
	  (gnus-uu-initialize):
	* nnmail.el (nnmail-make-complex-temp-name, nnmail-get-new-mail):
	  Use make-temp-file.

1999-09-07  Eli Zaretskii  <eliz@gnu.org>

	* nnsoup.el (nnsoup-tmp-directory): Use temporary-file-directory.

	* gnus-uu.el (gnus-uu-tmp-dir): Use temporary-file-directory.

1999-08-24  Andreas Schwab  <schwab@gnu.org>

	* gnus-art.el (gnus-emphasis-underline-italic): Doc fix.

1999-07-01  Karl Heuer  <kwzh@gnu.org>

	* gnus-uu.el (gnus-uu-decode-save-view): Fix typo.

1999-06-12  Markus Rost  <markus.rost@mathematik.uni-regensburg.de>

	* gnus-group.el (gnus-permanently-visible-groups): Fix custom type.

1999-04-08  Richard Stallman  <rms@gnu.org>

	* pop3.el (pop3-read-passwd): Use read-passwd if that is defined.

	* nnmail.el (nnmail-read-passwd): Use read-passwd if that is defined.

1999-04-07  Richard Stallman  <rms@gnu.org>

	* gnus-mh.el (gnus-summary-save-in-folder): Use mh-lib-progs.

1999-04-06  Richard Stallman  <rms@gnu.org>

	* nnlistserv.el: When compiling, ignore errors in nnweb.

1999-02-19  Lars Magne Ingebrigtsen  <larsi@menja.ifi.uio.no>

	* gnus.el: Gnus v5.6.46 is released.

1999-02-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-mule.el (""): Default to iso-latin-1.

1999-01-16  Tom Breton  <tob@world.std.com>

	* gnus-agent.el (gnus-agent-expire): Fix.

1999-01-16  Remek Trzaska  <remek@npac.syr.edu>

	* gnus-ems.el (): Recognize cygwin.

1998-12-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnfolder.el (nnfolder-save-mail): Handle From lines in
	headers.

1998-11-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
