@@ -61,7 +61,7 @@ values are 'apop.")
 Used for APOP authentication.")
 
 (defvar pop3-movemail-file-coding-system nil
-  "Crashbox made by `pop3-movemail' with this coding system.")
+  "Coding system for the crashbox made by `pop3-movemail'.")
 
 (defvar pop3-read-point nil)
 (defvar pop3-debug nil)
@@ -95,7 +95,8 @@ Used for APOP authentication.")
 	  (pop3-retr process n crashbuf)
 	  (save-excursion
 	    (set-buffer crashbuf)
-	    (write-region (point-min) (point-max) crashbox t 'nomesg)
+	    (let ((coding-system-for-write pop3-movemail-file-coding-system))
+	      (write-region (point-min) (point-max) crashbox t 'nomesg))
 	    (set-buffer (process-buffer process))
 	    (while (> (buffer-size) 5000)
 	      (goto-char (point-min))
